# db_section_1

./: .gitignore  .pre-commit-config.yaml  .template.env  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/db/: db_helper.py
app/db/models/: __init__.py  base.py  models.py
app/db/models/mixins/: name_mixin.py
